# RTOSExerciseJojoFabius

./: .gitignore  README.md  local_setup.sh
freertos/FreeRTOS-Kernel/: tasks.c
freertos/FreeRTOS-Kernel-SMP/: tasks.c
freertos/FreeRTOS-Kernel/include/freertos/: FreeRTOS.h
freertos/config/include/freertos/: FreeRTOSConfig.h  QueueTraceMacros.h  TaskTraceMacros.h  TickTraceMacros.h
main/: dt.hpp  main.cpp  main_opt_e3.cpp  pip.cpp  pip.h
tracing_scripts/: .gitignore  Cargo.toml  README.md  visualize.py
tracing_scripts/extract/: Cargo.toml
tracing_scripts/extract/src/: main.rs
tracing_scripts/src/: main.rs
tracing_scripts/types/: Cargo.toml
tracing_scripts/types/src/: lib.rs  parse.rs
tracing_scripts/visualize/: Cargo.toml
tracing_scripts/visualize/src/: main.rs
