[package]
name = "visualize"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
egui_plot = "0.34"

palette = { version = "0.7", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
plotters = "0.3"

types = { path = "../types" }
